Added LocalDateTime serializer (Bumped to 4.5.3)